tf-aws/06-auto-scaling/c1-4-security-group.tf
resource "aws_security_group" "allow_http_ssh" {
  vpc_id      = aws_vpc.main.id
  name        = "allow_http_ssh"
  description = "Allow SSH, HTTP inbound traffic"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
